# storm

./: .gitignore  README.md
App/: StormApp.swift
Core/: InputController.swift  Kernel.swift  PluginHost.swift  RuntimeKernel.swift  StormRuntime.swift  SystemRegistry.swift  UIScriptRouter.swift
Engine/: AgentViewModel.swift  BindableAgentService.swift  ConsoleLogService.swift  ECSComponents.swift  ECSCore.swift  ECSRealityKitBridge.swift  EchoAgentService.swift  LocalSceneManager.swift  OpenSimECSBridge.swift  RendererService-iOS.swift  RendererService-macOS.swift  RendererService.swift  RendererServiceFactory.swift  SceneRendererService.swift  StormLogger.swift
Engine/OpenSim/: OpenSimAvatarMovementSystem.swift  OpenSimChatSystem.swift  OpenSimCleanupManager.swift  OpenSimObjectLifecycleManager.swift  OpenSimStateManager.swift  OpenSimWorldIntegrator.swift
Network/: OSConnectManager.swift  OSMessageRouter.swift  OpenSimProtocol.swift
Plugins/: EchoAgentPlugin.swift  HUDTestPlugin.swift  HelloPlugin.swift  LocalWorldPlugin.swift  OpenSimPlugin.swift  PingPlugin.swift
RustCore/: Cargo.toml  module.modulemap  storm.h
RustCore/.cargo/: config.toml
RustCore/src/: lib.rs
RustCore/src/esc/: mod.rs
RustCore/src/protocols/: mod.rs
Tests/: OpenSimAdvancedTesting.swift  OpenSimTestFramework.swift  OpenSimTestSuites.swift
UI/: ActionBar.swift  AgentDetailCard.swift  CockpitView-iOS.swift  CockpitViewShared.swift  CompassMiniMapView.swift  ConsoleLogView.swift  ContentView.swift  InteractiveSceneView.swift  MiniMapView.swift  OpenSimLoginView.swift  SceneViewContainer.swift  SimpleView-macOS.swift  StormCockpitView-iOS.swift  StormCockpitView-macOS.swift  StormMainView.swift  UIComposer.swift  UISchema.swift  UISchemaView.swift  VirtualControls.swift
UI/Core/: StormCockpitView-iOS.swift  StormCockpitView-macOS.swift
docs/: ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  LOW_LEVEL_DESIGN.md  PROJECT_SUMMARY.md  SYSTEM_ARCHITECTURE.md
scripts/: build-rust-universal.sh
storm/: ContentView.swift  stormApp.swift
storm.xcodeproj/: project.pbxproj
storm.xcodeproj/xcuserdata/wenyan.xcuserdatad/xcschemes/: xcschememanagement.plist
