[package]
name = "storm_core"
version = "0.1.0"
edition = "2021"
authors = ["Storm Architecture Team"]
description = "AI-Native Virtual World Engine Core - Revolutionary RustCore for Storm"
license = "MIT"
repository = "https://github.com/finalverse/storm"
keywords = ["ai", "virtual-world", "metaverse", "real-time", "cross-platform"]
categories = ["game-engines", "multimedia", "network-programming"]

[lib]
name = "storm_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime and concurrency
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
crossbeam = "0.8"
parking_lot = "0.12"

# Networking and protocols
reqwest = { version = "0.11", features = ["json", "stream"] }
tungstenite = "0.20"
quinn = "0.10"  # QUIC protocol support

# Mathematics and linear algebra
nalgebra = "0.32"
cgmath = "0.18"
glam = "0.24"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

# Memory management and performance
mimalloc = { version = "0.1", optional = true }
jemalloc = { version = "0.3", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"
block = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"
core-foundation = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.7"

# Development dependencies for testing
[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
mockall = "0.11"
tempfile = "3.0"

# Features for conditional compilation
[features]
default = ["ai-enhanced", "cross-platform"]

# AI enhancement features
ai-enhanced = []
ml-integration = ["ai-enhanced"]
predictive-optimization = ["ai-enhanced"]

# Platform features
cross-platform = []
ios-support = ["cross-platform"]
android-support = ["cross-platform"]
web-support = ["cross-platform"]

# Memory allocator options
use-mimalloc = ["mimalloc"]
use-jemalloc = ["jemalloc"]

# Performance features
simd-optimizations = []
gpu-acceleration = []
multi-threading = []

# Protocol support
opensim-protocol = []
metaverse-protocols = []
custom-protocols = []

# Build configurations
[profile.dev]
opt-level = 1
debug = true
split-debuginfo = "packed"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true

# Platform-specific build configurations
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# iOS specific configuration
[package.metadata.bundle]
name = "StormCore"
identifier = "com.finalverse.storm.core"
version = "0.1.0"